
  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

* Unreleased
** Fix ellipse drawing                                               :BUGFIX:
Guile-PNG would fail to draw an ellipse at the specified position due to
rational number calculation errors.  Now it is fixed.

* Changes in version 0.7.1 (2023-08-20)
** Fix Bresenham's Line generation algorithm                         :BUGFIX:
Bresenham's Line generation algorithm would fail to draw properly some types
of inclined lines.  Now that is fixed.
** Fix the order of building Guile-PNG FSM modules                   :BUGFIX:
The building process would fail during =make distcheck=.  Not that is fixed.
** New modules
*** =(png graphics dimension)=
=<dimension>= class represents a dimension with width and height as
properties.
*** =(png graphics selection)=
=<selection>= class represents a selected part of an image.  The selected part
has only =selection-crop= method for now, that allows to get a part of the
base image as a new image.
** Add class printers for graphic objects
Classes from =(png graphics)= are now have proper class printers.
** Add new examples
New examples added:
- Sierpinski Triangle
- Sierpinski Carpet
- Sierpinski Carpet Animation

* Changes in version 0.7.0 (2023-07-19)
** Implement filter algorithms selection heuristics
When an image is being saved select filtering algorithms for each image row (a
"scanline") based on recommendations from RFC 2083 (see "9.6. Filter
selection".)  Using the recommended heuristics allows to improve compression
ratio and thus to reduce image the size.
** =(png core chunk bkgd)=: Fix a typo
Fix a typo in a <png-chunk:bKGD> slot name: replace "greyscale" with
"grayscale".
** Update the documentation
* Changes in version 0.6.0 (2023-06-11)
** Make image processing procedures names shorter                :API_CHANGE: